--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,13 @@ dependencies = [
   "sqlfluff==3.2.0",
   "tiktoken>=0.8.0",
   "ruff==0.12.3",
+  "mkdocs>=1.6.1",
+  "mkdocstrings>=0.30.1",
+  "mkdocstrings-python>=1.18.2",
+  "mkdocs-gen-files>=0.5.0",
+  "mkdocs-literate-nav>=0.6.2",
+  "mkdocs-section-index>=0.3.10",
+  "mkdocs-material>=9.6.22",
 ]
 
 [dependency-groups]
