don't autopublish for now

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,8 +1,9 @@
 name: build_docs
-on:
-  push:
-    branches:
-      - main
+# Disable for now while the repo is private
+# on:
+#   push:
+#     branches:
+#       - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
