--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,10 +66,9 @@ docs = [
   "mkdocs>=1.6.1",
   "mkdocstrings>=0.30.1",
   "mkdocstrings-python>=1.18.2",
-  "mkdocs-gen-files>=0.5.0",
-  "mkdocs-literate-nav>=0.6.2",
-  "mkdocs-section-index>=0.3.10",
   "mkdocs-material>=9.6.22",
+  "mkdocs-jupyter>=0.25.1",
+  "mkdocs-redirects>=1.2.2",
 ]
 notebooks = [
   "jupyter>=1.0.0",
