--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
       - Contributing: CONTRIBUTING.md
   - Concepts:
       - Columns: concepts/columns.md
+      - Validators: concepts/validators.md
       - Plugins: concepts/plugins.md
   - Tutorials:
       - The Basics: notebooks/1-the-basics.ipynb
