--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
       - Validators: concepts/validators.md
       - Plugins: concepts/plugins.md
   - Tutorials:
+      - Overview: notebooks/intro.md
       - The Basics: notebooks/1-the-basics.ipynb
       - Structured Outputs and Jinja Expressions: notebooks/2-structured-outputs-and-jinja-expressions.ipynb
       - Seeding with an External Dataset: notebooks/3-seeding-with-a-dataset.ipynb
