--- a/docs/notebooks/pyproject.toml
+++ b/docs/notebooks/pyproject.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "data-designer==0.1.0",
+    "data-designer>=0.1.0",
     "jupyter>=1.1.1",
 ]
