--- a/.github/workflows/build-notebooks.yml
+++ b/.github/workflows/build-notebooks.yml
@@ -1,11 +1,12 @@
 name: Build notebooks
 on:
-  push:
-#    paths:
-#      - 'docs/notebook_source'
+  workflow_call:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 12 * * MON"
   
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
