--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           name: notebooks
-      - name: Test if notebooks were downloaded
-        run: ls -la docs/notebooks
+      - name: Check if notebooks were downloaded
+        run: ls -la
 #      - name: Build and deploy docs
 #        run: uv run mkdocs gh-deploy --force --clean --verbose
