--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: NeMo Data Designer
+site_url: https://nvidia-nemo.github.io/DataDesigner/
 repo_url: https://github.com/NVIDIA-NeMo/DataDesigner
 
 nav:
@@ -64,6 +65,8 @@ theme:
 extra:
   version:
     provider: mike
+    alias: true
+    default: latest
 
 watch:
   - src/data_designer
