--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -62,6 +62,7 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
       - name: Setup doc deploy
         run: |
+          git fetch origin gh-pages --depth=1
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - name: Build and deploy docs
