docs for custom model settings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Concepts:
       - Models:
           - Default Model Settings: concepts/models/default-model-settings.md
+          - Custom Model Settings: concepts/models/custom-model-settings.md
           - Configure with the CLI: concepts/models/configure-model-settings-with-the-cli.md
           - Model Providers: concepts/models/model-providers.md
           - Model Configs: concepts/models/model-configs.md
