--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
           - Inference Parameters: concepts/models/inference-parameters.md
       - Columns: concepts/columns.md
       - Validators: concepts/validators.md
+      - Processors: concepts/processors.md
       - Person Sampling: concepts/person_sampling.md
   - Tutorials:
       - Overview: notebooks/README.md
