--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
       - data_designer_config: code_reference/data_designer_config.md
       - sampler_params: code_reference/sampler_params.md
       - validator_params: code_reference/validator_params.md
+      - processors: code_reference/processors.md
       - analysis: code_reference/analysis.md
 
 theme:
