--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
   "pydantic[email]>=2.9.2",
   "scipy>=1.11.0",
   "sqlfluff==3.2.0",
+  "streamlit>=1.40.0",
   "tiktoken>=0.8.0",
   "ruff==0.12.3",
 ]
