these got reverted somehow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,12 @@ dependencies = [
   "python-json-logger>=3,<4",
   "pyyaml>=6.0.1,<7",
   "requests<3,>=2.32.2",
-  "rich>=13.7.1",
+  "rich>=13.7.1,<14",
   "ruff>=0.14.10,<1",
-  "scipy>=1.11.0",
-  "sqlfluff==3.2.0",
-  "tiktoken>=0.8.0",
-  "typer>=0.12.0",
+  "scipy>=1.11.0,<2",
+  "sqlfluff>=3.2.0,<4",
+  "tiktoken>=0.8.0,<1",
+  "typer>=0.12.0,<1",
 ]
 
 [project.scripts]
