--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           version: "0.9.5"
       - name: Set up Python
-        run: uv python install
+        run: uv python install 3.11
       - name: Install dependencies for docs
         run: uv sync --group docs
       - name: Download artifact from previous step
