update upper bound

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "jinja2>=3.1.6,<4",
   "json-repair>=0.48.0,<1",
   "jsonpath-rust-bindings>=1.0,<2",
-  "litellm>=1.73.6,<2",
+  "litellm>=1.73.6,<1.80.12", # Excessive warnings started in 1.80.12
   "lxml>=6.0.2,<7",
   "marko>=2.1.2,<3",
   "networkx>=3.0,<4",
