--- a/e2e_tests/pyproject.toml
+++ b/e2e_tests/pyproject.toml
@@ -9,13 +9,14 @@ dependencies = [
 
 [project.entry-points."data_designer.plugins"]
 test-column-generator = "data_designer_e2e_tests.plugins.column_generator.plugin:column_generator_plugin"
-test-seed-dataset = "data_designer_e2e_tests.plugins.seed_dataset.plugin:seed_dataset_plugin"
+# test-seed-dataset = "data_designer_e2e_tests.plugins.seed_dataset.plugin:seed_dataset_plugin"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
+testpaths = ["tests"]
 env = [
   # ensure plugins are enabled
   "DISABLE_DATA_DESIGNER_PLUGINS=false",
