--- a/.github/ISSUE_TEMPLATE/development-task.yml
+++ b/.github/ISSUE_TEMPLATE/development-task.yml
@@ -1,11 +1,12 @@
 name: 🛠️ Development Task
 description: Track internal development work, refactoring, or infrastructure
-labels: ["task", "internal"]
+labels: ["task"]
 body:
   - type: dropdown
     id: priority
     attributes:
       label: Priority Level
+      default: 1
       options:
         - High
         - Medium
@@ -28,13 +29,4 @@ body:
     id: dependencies
     attributes:
       label: Dependencies
-      placeholder: "e.g., Blocked by issue #123, requires Node v20 upgrade"
-  - type: checkboxes
-    id: checklist
-    attributes:
-      label: Definition of Done
-      options:
-        - label: Code implemented
-        - label: Unit tests written/updated
-        - label: Documentation updated (if applicable)
-        - label: Code reviewed
+      placeholder: "e.g., Blocked by issue #123"
