--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,12 +1,13 @@
 name: 🐛 Bug Report
-description: Report a bug to help us improve
-labels: ["bug", "triage"]
+description: Report a bug
+labels: ["bug"]
 body:
   - type: dropdown
     id: priority
     attributes:
       label: Priority Level
       description: How urgent is this issue?
+      default: 2
       options:
         - Critical (Total blocker)
         - High (Major functionality broken)
@@ -29,9 +30,11 @@ body:
         Please list *minimal* steps or code snippet for us to be able to reproduce the bug.
         A helpful guide on how to craft a minimal bug report: http://matthewrocklin.com/blog/work/2018/02/28/minimal-bug-reports
       placeholder: |
-        1. Go to '...'
-        2. Click on '....'
-        3. See error
+        Please include:
+          - Minimal code example that reproduces the issue
+          - Configuration used (if applicable)
+          - Commands run (if applicable)
+          - Error traceback
     validations:
       required: true
   - type: textarea
