--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
   "scipy>=1.11.0,<2",
   "sqlfluff>=3.2.0,<4",
   "tiktoken>=0.8.0,<1",
+  "tuna>=0.5.11",
   "typer>=0.12.0,<1",
 ]
 
