--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,6 @@ dependencies = [
   "scipy>=1.11.0,<2",
   "sqlfluff>=3.2.0,<4",
   "tiktoken>=0.8.0,<1",
-  "tuna>=0.5.11",
   "typer>=0.12.0,<1",
 ]
 
@@ -63,6 +62,7 @@ dev = [
   "pytest-env>=1.2.0,<2",
   "pytest-httpx>=0.35.0,<1",
   "pytest>=8.3.3,<9",
+  "tuna>=0.5.11,<6",
 ]
 docs = [
   "mike>=2.1.3,<3",
