--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,9 @@ nav:
       - validator_params: code_reference/validator_params.md
       - processors: code_reference/processors.md
       - analysis: code_reference/analysis.md
+  - Technical Guides:
+      - Overview: blog/index.md
+      - Engineering an Enterprise-Grade Text-to-SQL Dataset: blog/posts/Text-to-SQL.md
 
 theme:
   name: material
@@ -92,6 +95,15 @@ watch:
 
 plugins:
   - search
+  - blog:
+      blog_dir: blog
+      post_dir: "{blog}/posts"
+      post_date_format: medium
+      post_url_format: "{date}/{slug}"
+      archive: false
+      categories: false
+      pagination: true
+      pagination_per_page: 10
   - mike:
       alias_type: symlink
       canonical_version: latest
