--- a/packages/data-designer/pyproject.toml
+++ b/packages/data-designer/pyproject.toml
@@ -31,25 +31,14 @@ dependencies = [
 [project.scripts]
 data-designer = "data_designer.cli:main"
 
-[dependency-groups]
-dev = [
-    "jsonpath-ng>=1.5.3,<2",
-    "pytest>=8.3.3,<9",
-    "pytest-asyncio>=0.24.0,<1",
-    "pytest-cov>=7.0.0,<8",
-    "pytest-env>=1.2.0,<2",
-    "pytest-httpx>=0.35.0,<1",
-    "pre-commit>=4.0.0,<5",
-]
-
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [tool.hatch.version]
 source = "vcs"
-root = "../.."
 fallback-version = "0.1.0.dev0"
+raw-options = { root = "../.." }
 
 [tool.hatch.build.hooks.vcs]
 version-file = "src/data_designer/interface/_version.py"
@@ -57,36 +46,9 @@ version-file = "src/data_designer/interface/_version.py"
 [tool.hatch.build.targets.wheel]
 packages = ["src/data_designer"]
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-asyncio_default_fixture_loop_scope = "session"
-env = ["DISABLE_DATA_DESIGNER_PLUGINS=true"]
-
-[tool.coverage.run]
-source = ["src"]
-
 [tool.uv]
 package = true
 
 [tool.uv.sources]
 data-designer-config = { workspace = true }
 data-designer-engine = { workspace = true }
-
-[tool.ruff]
-line-length = 120
-indent-width = 4
-target-version = "py310"
-
-[tool.ruff.lint]
-select = ["W", "F", "I", "ICN", "PIE", "TID", "UP006", "UP007", "UP045"]
-ignore = ["ANN401"]
-
-[tool.ruff.lint.isort]
-known-first-party = ["data_designer"]
-
-[tool.ruff.lint.flake8-tidy-imports]
-ban-relative-imports = "all"
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
