fix e2e project config

--- a/tests_e2e/pyproject.toml
+++ b/tests_e2e/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-data-designer = { path = "../" }
+data-designer = { path = "../packages/data-designer" }
 
 [dependency-groups]
 dev = [
