update for IDE behavior with ruff

--- a/packages/data-designer-config/pyproject.toml
+++ b/packages/data-designer-config/pyproject.toml
@@ -45,5 +45,8 @@ version-file = "src/data_designer/config/_version.py"
 [tool.hatch.build.targets.wheel]
 packages = ["src/data_designer"]
 
+[tool.ruff]
+extend = "../../pyproject.toml"
+
 [tool.uv]
 package = true
