--- a/packages/data-designer/pyproject.toml
+++ b/packages/data-designer/pyproject.toml
@@ -46,6 +46,9 @@ version-file = "src/data_designer/interface/_version.py"
 [tool.hatch.build.targets.wheel]
 packages = ["src/data_designer"]
 
+[tool.ruff]
+extend = "../../pyproject.toml"
+
 [tool.uv]
 package = true
 
