--- a/packages/data-designer-config/pyproject.toml
+++ b/packages/data-designer-config/pyproject.toml
@@ -19,15 +19,14 @@ classifiers = [
 ]
 
 dependencies = [
-    "anyascii>=0.3.3,<1",
     "jinja2>=3.1.6,<4",
-    "jsonschema>=4.0.0,<5",
-    "lxml>=6.0.2,<7",
-    "marko>=2.1.2,<3",
-    "networkx>=3.0,<4",
+    "numpy>=1.23.5,<3",
+    "pandas>=2.3.3,<3",
     "pydantic[email]>=2.9.2,<3",
     "pygments>=2.19.2,<3",
+    "python-json-logger>=3,<4",
     "pyyaml>=6.0.1,<7",
+    "rich>=13.7.1,<15",
 ]
 
 [build-system]
