--- a/packages/data-designer-engine/pyproject.toml
+++ b/packages/data-designer-engine/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "anyascii>=0.3.3,<1",
     "data-designer-config",
     "duckdb>=1.1.3,<2",
     "faker>=20.1.0,<21",
@@ -27,12 +28,15 @@ dependencies = [
     "huggingface-hub>=1.0.1,<2",
     "json-repair>=0.48.0,<1",
     "jsonpath-rust-bindings>=1.0,<2",
+    "jsonschema>=4.0.0,<5",
     "litellm>=1.73.6,<1.80.12",
+    "lxml>=6.0.2,<7",
+    "marko>=2.1.2,<3",
+    "networkx>=3.0,<4",
     "numpy>=1.23.5,<3",
     "pandas>=2.3.3,<3",
     "pyarrow>=19.0.1,<20",
-    "python-json-logger>=3,<4",
-    "requests>=2.32.2,<3",
+    "ruff>=0.14.10,<1",
     "scipy>=1.11.0,<2",
     "sqlfluff>=3.2.0,<4",
     "tiktoken>=0.8.0,<1",
