--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dev = [
     "pre-commit>=4.0.0,<5",
 ]
 docs = [
+    "jupytext>=1.16.0,<2",
     "mike>=2.1.3,<3",
     "mkdocs-jupyter>=0.25.1,<1",
     "mkdocs-material>=9.6.22,<10",
