--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,6 +108,10 @@ plugins:
   - mkdocstrings:
       handlers:
           python:
+              paths:
+                  - packages/data-designer-config/src
+                  - packages/data-designer-engine/src
+                  - packages/data-designer/src
               options:
                   show_symbol_type_heading: true
                   show_symbol_type_toc: true
