--- a/packages/data-designer/pyproject.toml
+++ b/packages/data-designer/pyproject.toml
@@ -2,7 +2,7 @@
 name = "data-designer"
 dynamic = ["version"]
 description = "General framework for synthetic data generation"
-readme = "../../README.md"
+readme = "README.md"
 requires-python = ">=3.10"
 license = "Apache-2.0"
 
