--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,10 @@ notebooks = [
     "jupyter>=1.0.0,<2",
     "pillow>=12.0.0,<13",
 ]
+recipes = [
+    "bm25s>=0.2.0",
+    "pymupdf>=1.24.0",
+]
 
 [tool.pytest.ini_options]
 testpaths = [
