--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,15 @@ nav:
       - Validators: concepts/validators.md
       - Processors: concepts/processors.md
       - Person Sampling: concepts/person_sampling.md
-      - Tool Use & MCP: concepts/tool_use_and_mcp.md
+      - Tool Use & MCP:
+          - Overview: concepts/tool_use_and_mcp.md
+          - MCP Providers: concepts/mcp/mcp-providers.md
+          - Tool Configs: concepts/mcp/tool-configs.md
+          - Enabling Tools: concepts/mcp/enabling-tools.md
+          - CLI Configuration: concepts/mcp/configure-mcp-cli.md
+          - Traces: concepts/mcp/traces.md
+          - Safety & Limits: concepts/mcp/safety-and-limits.md
+          - Debugging: concepts/mcp/debugging.md
   - Tutorials:
       - Overview: notebooks/README.md
       - The Basics: notebooks/1-the-basics.ipynb
